2 version + tests file added