@@ -2,13 +2,15 @@ package model;
 
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 class RandomAIStrategy implements AIStrategy {
     @Override
     public Magic chooseSpell(AIMagician ai, Magician target) {
         List<Magic> affordableSpells = ai.spellBook.stream()
                 .filter(s -> s.isEnoughMana(ai))
-                .toList();
+                .collect(Collectors.toList());
+
         if (affordableSpells.isEmpty()) return null;
         return affordableSpells.get(new Random().nextInt(affordableSpells.size()));
     }
